--- a/COVID_19_AI_Detection_Challenge.ipynb
+++ b/COVID_19_AI_Detection_Challenge.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "COVID-19 AI Detection Challenge.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+T5G8c5SHozGNYkWKjvTQ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO3TktXu7V6o3eJWceBOuRA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,7 +188,7 @@
       "metadata": {
         "id": "6fPT4ipNJ_kn"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -3997,7 +3998,10 @@
     {
       "cell_type": "code",
       "source": [
-        "base_model = tf.keras.ap"
+        "pre_lalyer = tf.keras.applications.mobilenet_v3\n",
+        "base_model = tf.keras.applications.MobileNetV3Small(input_shape=(img_size[0],img_size[1],3),\n",
+        "                                                    include_top=False,\n",
+        "                                                    wdight='imagenet')"
       ],
       "metadata": {
         "id": "Z2F6tVo74bRv"
